--- a/daily_practice_problem.ipynb
+++ b/daily_practice_problem.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMpqzPkhp7s8799Y7WTZ0S8",
+      "authorship_tag": "ABX9TyMHVo5h9zLWXCrJwWHgTicW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "id": "uWTpd0pRHUdy"
       },
       "source": [
-        "## Function"
+        "# Function"
       ]
     },
     {
@@ -53,7 +53,7 @@
         "id": "HXcjRUN-h7uZ"
       },
       "source": [
-        "### Multiplication Table\n",
+        "## Multiplication Table\n",
         "- Write a function that inputs a number and prints the multiplication table of \n",
         "that number.\n"
       ]
@@ -140,7 +140,7 @@
         "id": "5U5CjC6YgnwZ"
       },
       "source": [
-        "### Twin Prime\n",
+        "## Twin Prime\n",
         "- Write a program to print twin primes less than 1000. If two consecutive odd numbers are both prime then they are known as twin primes. [twin prime](https://en.wikipedia.org/wiki/Twin_prime)"
       ]
     },
@@ -150,7 +150,7 @@
         "id": "rPsh3bTfDmGC"
       },
       "source": [
-        "**Algorithm-1**\n",
+        "### Algorithm-1\n",
         "\n",
         "\n",
         "---\n",
@@ -188,7 +188,7 @@
         "\n",
         "  "
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -306,7 +306,7 @@
         "id": "0vangbdlDs4q"
       },
       "source": [
-        "**Algorithm-2**\n",
+        "### Algorithm-2\n",
         "\n",
         "---\n",
         "\n"
@@ -462,7 +462,7 @@
         "id": "RzgU923UZ6Yo"
       },
       "source": [
-        "### Prime factorisation\n",
+        "## Prime factorisation\n",
         "Write a program to find out the prime factors of a number. Example: prime factors of 56 -2, 2, 2, 7\n"
       ]
     },
@@ -472,7 +472,7 @@
         "id": "kBSbt6Hw43zT"
       },
       "source": [
-        "**Algorithm-1**\n",
+        "### Algorithm-1\n",
         "\n",
         "---\n",
         "\n"
@@ -485,7 +485,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K7Gv1rVeZ6AT",
-        "outputId": "bf0f5f33-7de8-4c93-cbe0-603e9a888007"
+        "outputId": "81665b2f-a437-4885-e883-b79a7cd5f02e"
       },
       "source": [
         "def primeFact(n):\n",
@@ -506,7 +506,7 @@
         "\n",
         "primeFact(44289)"
       ],
-      "execution_count": 92,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +523,7 @@
         "id": "A4Z_1znl5APk"
       },
       "source": [
-        "**Algorithm-2:** More efficient"
+        "### Algorithm-2 More efficient"
       ]
     },
     {
@@ -533,7 +533,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xkRnXHUvtBD1",
-        "outputId": "28458f55-b6d6-423b-ae1a-414e07752b43"
+        "outputId": "65155ba5-2857-49a7-e5a4-e0ce5a329c6d"
       },
       "source": [
         "import math\n",
@@ -556,7 +556,7 @@
         "\n",
         "factors(44289)"
       ],
-      "execution_count": 76,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -579,7 +579,7 @@
       "source": [
         "factors(9905973)"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,7 +602,7 @@
       "source": [
         "primeFact(9905973)"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -620,12 +620,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GrELeIY8Z5wS",
-        "outputId": "c72cdaf8-02a2-4ef3-af47-69786a1cf3bc"
+        "outputId": "35677ad7-e5ea-475e-eff0-0f88055f140e"
       },
       "source": [
         "primeFact(1263761079)"
       ],
-      "execution_count": 94,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -652,12 +652,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bffp6jUq2E6u",
-        "outputId": "7f1aca15-7424-42fe-8bf1-f5808b80e9b3"
+        "outputId": "8e44f88c-b8de-4573-af2c-ca0bd78fcfb9"
       },
       "source": [
         "factors(1263761079)"
       ],
-      "execution_count": 90,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -683,7 +683,7 @@
         "id": "pFjmz7O-5s3L"
       },
       "source": [
-        "### permutation and combination\n",
+        "## permutation and combination\n",
         "Write a program to implement these formulae of permutations and combinations.\n",
         "Number of permutations of n objects taken r at a time: p(n, r) = n! / (n-r)!. Number of combinations of n objects taken r at a time is: c(n, r) = n! / (r!*(n-r)!) = p(n,r) / r!"
       ]
@@ -731,7 +731,7 @@
         "r=int(input('entet the value of r :'))\n",
         "print('permutation of entered numbers is {}, and combination is {}'.format(p(n,r),c(n,r)))"
       ],
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,7 +756,7 @@
       "source": [
         "fact(5)"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -784,7 +784,7 @@
       "source": [
         "p(5,3)"
       ],
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -812,7 +812,7 @@
       "source": [
         "c(5,3)"
       ],
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -826,10 +826,522 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Tm25PGvnoBx3"
+      },
+      "source": [
+        "## Decimal to binary\n",
+        "Write a function that converts a decimal number to binary number\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FB-g5W-5Xhf0"
+      },
+      "source": [
+        "### Algorithm-1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "idwbRHANoJFm"
+      },
+      "source": [
+        "def Decimal2Binary(num):\n",
+        "  \"\"\"take a decimal number and return it's binary representaion\"\"\"\n",
+        "  lst=[]\n",
+        "  while num>0:\n",
+        "    i=num%2\n",
+        "    lst.insert(0,i) #or lst.append(i) then lst.reverse()\n",
+        "    num=num//2\n",
+        "  for i in lst:\n",
+        "    print(i, end='')"
+      ],
+      "execution_count": 98,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YKEskHg1LwCn",
+        "outputId": "41f42924-2327-4f3f-a07b-32a55462ae4a"
+      },
+      "source": [
+        "l=Decimal2Binary(10)"
+      ],
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1010"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EQrlGaEJXmXa"
+      },
+      "source": [
+        "### Algorithm-2 (recursive function)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "80LOOPt1RrSp"
+      },
+      "source": [
+        "def rDecimal2Binary(num):\n",
+        "  \"\"\"take a decimal number and return it's binary representaion\"\"\"\n",
+        "  if num>1:\n",
+        "    rDecimal2Binary(num//2)\n",
+        "  i=num%2\n",
+        "  print(i,end='')"
+      ],
+      "execution_count": 100,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mh7xCXSAH-4k",
+        "outputId": "b5f6b75e-e896-45d1-bf37-2a4423067cac"
+      },
+      "source": [
+        "rDecimal2Binary(10)"
+      ],
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1010"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Hq02EyjvXq5S"
+      },
+      "source": [
+        "### Algorithm-3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TuSAEui3JILN",
+        "outputId": "a01806fb-2e6e-45f5-9aa5-5c621c5fbaab"
+      },
+      "source": [
+        "def binary(num):\n",
+        "  \"\"\"take a decimal number and return it's binary representaion\"\"\"\n",
+        "  temp=[]\n",
+        "  while num>0:\n",
+        "    temp.append(num & 1)    #bitwise operator &\n",
+        "    num=num>>1              #bitwise operator >>\n",
+        "  \n",
+        "  temp=temp[::-1]           #reversing the list\n",
+        "  temp=map(str,temp)\n",
+        "  return int(\"\".join(temp))  #join and print\n",
+        "binary(10)"
+      ],
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1010"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aCXk9Y5cJiL5",
+        "outputId": "030311aa-7204-4997-d062-2be61749158f"
+      },
+      "source": [
+        "24 & 1"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PqYsIYMuKq4Y",
+        "outputId": "2bd59754-d80b-4d21-ee27-935ca5e65936"
+      },
+      "source": [
+        "24>>1"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oU-bD5eMKp1p"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UdfViUkvoH0W"
+      },
+      "source": [
+        "## Armstrong number\n",
+        " Write a function **cubesum()** that accepts an integer and returns the sum of the cubes of individual digits of that number. Use this function to make functions **PrintArmstrong()** and **isArmstrong()** to print Armstrong numbers and to find whether is an Armstrong number"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d6MPg9HxG3Rb"
+      },
+      "source": [
+        "### Algorithm-1\n",
+        "\n",
+        "---\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "91FC4zCCoJnn"
+      },
+      "source": [
+        "def cubesum(n):\n",
+        "  '''this return sum of cube of its digit'''\n",
+        "  l=str(n)\n",
+        "  s=0\n",
+        "  for i in l:\n",
+        "    s=s+int(i)**3\n",
+        "  return s\n",
+        "\n",
+        "def isArmstrong(a):\n",
+        "  '''check for armstrong number '''\n",
+        "  if a==cubesum(a):\n",
+        "    return True\n",
+        "  else:\n",
+        "    return False\n",
+        "\n",
+        "def PrintArmstrong(num):\n",
+        "  '''print armstrong number '''\n",
+        "  if isArmstrong(num):\n",
+        "    print(\"{} is an armstrong number\".format(num))\n",
+        "  else:\n",
+        "    print(\"{} is NOT an armstrong number\".format(num))"
+      ],
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HEE5ObwKCmgs",
+        "outputId": "cd5931e2-a1c7-406d-c386-be8e8a9ab24c"
+      },
+      "source": [
+        "cubesum(153)"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "153"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tuefXwUMDVW7",
+        "outputId": "986cc7eb-83ae-4d28-acf3-4de9e434c750"
+      },
+      "source": [
+        "isArmstrong(153)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xyXn7NrLDaDg",
+        "outputId": "ce07fef2-2e6b-462b-bd8c-8bb1ced96ab8"
+      },
+      "source": [
+        "PrintArmstrong(153)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "153 is an armstrong number\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ubFHNA6qGSSS",
+        "outputId": "fdcc0d07-45d8-4847-d96f-650920578f2f"
+      },
+      "source": [
+        "PrintArmstrong1(370)"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "370 is an armstrong number\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2mBekei2GUAb",
+        "outputId": "9beb830d-0c7f-4e7f-f2b7-13a6b9303af4"
+      },
+      "source": [
+        "PrintArmstrong1(407)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "407 is an armstrong number\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OUiTy7SqG_bi"
+      },
+      "source": [
+        "### Algorithm-2\n",
+        "\n",
+        "---\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T5VA-gfUEIPz"
+      },
+      "source": [
+        "def cubesum1(n):\n",
+        "  '''this return sum of cube of its digit'''\n",
+        "  s=0\n",
+        "  while n>0:\n",
+        "    i=n%10\n",
+        "    s=s+i**3\n",
+        "    n=n//10\n",
+        "  return s\n",
+        "\n",
+        "def isArmstrong1(a):\n",
+        "  '''check for armstrong number '''\n",
+        "  if a==cubesum1(a):\n",
+        "    return True\n",
+        "  else:\n",
+        "    return False\n",
+        "\n",
+        "def PrintArmstrong1(num):\n",
+        "  '''print armstrong number '''\n",
+        "  if isArmstrong1(num):\n",
+        "    print(\"{} is an armstrong number\".format(num))\n",
+        "  else:\n",
+        "    print(\"{} is NOT an armstrong number\".format(num))"
+      ],
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1oWESaH5FnF4",
+        "outputId": "9d0a849c-5586-4a3a-b222-560ab181f11e"
+      },
+      "source": [
+        "PrintArmstrong1(153)"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1531 is NOT an armstrong number\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nKN6SuWpGCup",
+        "outputId": "49ef7469-2a28-4a9b-97ab-56289af0a054"
+      },
+      "source": [
+        "PrintArmstrong1(370)"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "370 is an armstrong number\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JoXT2WnFGCiK",
+        "outputId": "9200458e-4968-45d1-b06d-e8726dbba1ec"
+      },
+      "source": [
+        "PrintArmstrong1(407)"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "407 is an armstrong number\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "wNqNSE_4dWRb"
       },
       "source": [
-        "## Recursive function\n",
+        "# Recursive function\n",
         "\n",
         "\n",
         "*   Write recursive function for HCF \n",
