--- a/daily_practice_problem.ipynb
+++ b/daily_practice_problem.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMHVo5h9zLWXCrJwWHgTicW",
+      "authorship_tag": "ABX9TyOdqkI426GM6xP+1LMZXY82",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1332,6 +1332,377 @@
             "407 is an armstrong number\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_u1uXrTnbW0R"
+      },
+      "source": [
+        "## Product of digit\n",
+        "Write a function prodDigits() that inputs a number and returns the product of digits of that number."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zkCp57N8kyLu"
+      },
+      "source": [
+        "### Algorithm-1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MqjMAMA0bWZK"
+      },
+      "source": [
+        "def prodDigit(n):\n",
+        "  '''this return product of its digit'''\n",
+        "  s=1\n",
+        "  while n>0:\n",
+        "    i=n%10\n",
+        "    s=s*i\n",
+        "    n=n//10\n",
+        "  return s"
+      ],
+      "execution_count": 103,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "stuMxksCde6s",
+        "outputId": "681849e4-b9d6-46f8-cb4c-f2d8979fec3d"
+      },
+      "source": [
+        "prodDigit(1234546855)"
+      ],
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "576000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 114
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PkHeH_w6k3d3"
+      },
+      "source": [
+        "### Algorithm-2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jmZtQEPedzNh"
+      },
+      "source": [
+        "def prodDigit_v2(n):\n",
+        "  '''this return product of its digit'''\n",
+        "  l=str(n)\n",
+        "  s=1\n",
+        "  for i in l:\n",
+        "    s=s*int(i)\n",
+        "  return s"
+      ],
+      "execution_count": 108,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L9bEoizMeGLm",
+        "outputId": "91fdbed6-57e3-40b9-b834-cddf81d7b2fc"
+      },
+      "source": [
+        "prodDigit_v2(1234546855)"
+      ],
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "576000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 115
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uuWatvz2bo8R"
+      },
+      "source": [
+        "## Multiplicative digital root\n",
+        "If all digits of a number n are multiplied by each other repeating with the product, the one digit number obtained at last is called the multiplicative digital root of n. The number of times digits need to be multiplied to reach one digit is called the multiplicative persistance of n.\n",
+        "Example:\n",
+        "```\n",
+        "86 -> 48 -> 32 -> 6 (MDR 6, MPersistence 3)\n",
+        "341 -> 12->2 (MDR 2, MPersistence 2)\n",
+        "```\n",
+        "Using the function prodDigits() of previous exercise write functions MDR() and MPersistence() that input a number and return its multiplicative digital root and multiplicative persistence respectively"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XUW-zZIPiX2P"
+      },
+      "source": [
+        "### Algorithm-1 (Recursive function)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w7YBAodkchtT"
+      },
+      "source": [
+        "def MDR(num):\n",
+        "  if num<10:\n",
+        "    return num\n",
+        "  else:\n",
+        "    num=prodDigit(num)\n",
+        "    return MDR(num)\n",
+        "\n",
+        "def MPersistance(num):\n",
+        "  i=0\n",
+        "  while num>9:\n",
+        "    num=prodDigit(num)\n",
+        "    i+=1\n",
+        "  return i\n"
+      ],
+      "execution_count": 170,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z_E0E0s4fPb9",
+        "outputId": "8a56054a-1828-44d7-c759-403c76a3b3fe"
+      },
+      "source": [
+        "MDR(341)"
+      ],
+      "execution_count": 171,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 171
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-nzQJsAbhX7d",
+        "outputId": "1a7b4889-b97d-4b50-c311-acabab99c348"
+      },
+      "source": [
+        "MPersistance(341)"
+      ],
+      "execution_count": 172,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 172
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s5JHJE7fipOm"
+      },
+      "source": [
+        "### Algorithm-2 "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RI6KChkEhmUi"
+      },
+      "source": [
+        "def MDR1(num):\n",
+        "  while num>9:\n",
+        "    num=prodDigit(num) \n",
+        "  return num\n",
+        "\n",
+        "\n",
+        "def MPersistance1(num):\n",
+        "  i=0\n",
+        "  while num>9:\n",
+        "    num=prodDigit(num)\n",
+        "    i+=1\n",
+        "  return i"
+      ],
+      "execution_count": 173,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jrxuo1gviCoa",
+        "outputId": "740c8730-58c2-410d-9391-a4151bd3e2ac"
+      },
+      "source": [
+        "MDR1(341)"
+      ],
+      "execution_count": 181,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 181
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "THGabaPciClu",
+        "outputId": "6c1ac575-ad2b-4ed8-8b70-d5027afdd3d8"
+      },
+      "source": [
+        "MPersistance1(86)"
+      ],
+      "execution_count": 175,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 175
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DVBsnm1hlR6F"
+      },
+      "source": [
+        "### Algorithm-2 (version-2)\n",
+        "(more efficient as looping decreased)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9kbTV0RGi7_u"
+      },
+      "source": [
+        "def MDR3(num):\n",
+        "  num=prodDigit(num)\n",
+        "  while num>9:\n",
+        "    num=prodDigit(num) \n",
+        "  return num\n",
+        "\n",
+        "\n",
+        "def MPersistance3(num):\n",
+        "  i=0\n",
+        "  while num>9:\n",
+        "    num=prodDigit(num)\n",
+        "    i+=1\n",
+        "  return i"
+      ],
+      "execution_count": 178,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "btpHcg-Ulpfa",
+        "outputId": "323cf415-767b-4210-fd59-789a9d265ae6"
+      },
+      "source": [
+        "MDR(341)"
+      ],
+      "execution_count": 180,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 180
         }
       ]
     },
