--- a/daily_practice_problem.ipynb
+++ b/daily_practice_problem.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOdqkI426GM6xP+1LMZXY82",
+      "authorship_tag": "ABX9TyM7zxJ5ybEHrsF2DcXd9xG7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -506,7 +506,7 @@
         "\n",
         "primeFact(44289)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,7 +556,7 @@
         "\n",
         "factors(44289)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -625,7 +625,7 @@
       "source": [
         "primeFact(1263761079)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -657,7 +657,7 @@
       "source": [
         "factors(1263761079)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -858,7 +858,7 @@
         "  for i in lst:\n",
         "    print(i, end='')"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -873,7 +873,7 @@
       "source": [
         "l=Decimal2Binary(10)"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,12 +901,13 @@
       "source": [
         "def rDecimal2Binary(num):\n",
         "  \"\"\"take a decimal number and return it's binary representaion\"\"\"\n",
+        "  \n",
         "  if num>1:\n",
         "    rDecimal2Binary(num//2)\n",
         "  i=num%2\n",
         "  print(i,end='')"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -921,7 +922,7 @@
       "source": [
         "rDecimal2Binary(10)"
       ],
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -963,7 +964,7 @@
         "  return int(\"\".join(temp))  #join and print\n",
         "binary(10)"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -991,7 +992,7 @@
       "source": [
         "24 & 1"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1019,7 +1020,7 @@
       "source": [
         "24>>1"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1094,7 +1095,7 @@
         "  else:\n",
         "    print(\"{} is NOT an armstrong number\".format(num))"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1109,7 +1110,7 @@
       "source": [
         "cubesum(153)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1137,7 +1138,7 @@
       "source": [
         "isArmstrong(153)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1165,7 +1166,7 @@
       "source": [
         "PrintArmstrong(153)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1188,7 +1189,7 @@
       "source": [
         "PrintArmstrong1(370)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1211,7 +1212,7 @@
       "source": [
         "PrintArmstrong1(407)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1263,7 +1264,7 @@
         "  else:\n",
         "    print(\"{} is NOT an armstrong number\".format(num))"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1278,7 +1279,7 @@
       "source": [
         "PrintArmstrong1(153)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1301,7 +1302,7 @@
       "source": [
         "PrintArmstrong1(370)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1324,7 +1325,7 @@
       "source": [
         "PrintArmstrong1(407)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1369,7 +1370,7 @@
         "    n=n//10\n",
         "  return s"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1384,7 +1385,7 @@
       "source": [
         "prodDigit(1234546855)"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1423,7 +1424,7 @@
         "    s=s*int(i)\n",
         "  return s"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1438,7 +1439,7 @@
       "source": [
         "prodDigit_v2(1234546855)"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1499,7 +1500,7 @@
         "    i+=1\n",
         "  return i\n"
       ],
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1514,7 +1515,7 @@
       "source": [
         "MDR(341)"
       ],
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1542,7 +1543,7 @@
       "source": [
         "MPersistance(341)"
       ],
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1586,7 +1587,7 @@
         "    i+=1\n",
         "  return i"
       ],
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1601,7 +1602,7 @@
       "source": [
         "MDR1(341)"
       ],
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1629,7 +1630,7 @@
       "source": [
         "MPersistance1(86)"
       ],
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1675,7 +1676,7 @@
         "    i+=1\n",
         "  return i"
       ],
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1690,7 +1691,7 @@
       "source": [
         "MDR(341)"
       ],
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1712,10 +1713,8 @@
         "id": "wNqNSE_4dWRb"
       },
       "source": [
-        "# Recursive function\n",
-        "\n",
-        "\n",
-        "*   Write recursive function for HCF \n",
+        "## HCF of two number\n",
+        "*  Write recursive function for HCF \n",
         "\n"
       ]
     },
@@ -1817,6 +1816,122 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7LWSDhLhanzF"
+      },
+      "source": [
+        "## perfect number\n",
+        "* A number is called perfect if the sum of proper divisors of that number is equal to the number. For example 28 is perfect number, since 1+2+4+7+14=28. Write a program to\n",
+        "print all the perfect numbers in a given range"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2IbcAGJ5a-Ab"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_PK4dZG5a-jL"
+      },
+      "source": [
+        "## amicable numbers\n",
+        "* Two different numbers are called amicable numbers if the sum of the proper divisors of each is equal to the other number. For example 220 and 284 are amicable numbers.\n",
+        "```\n",
+        "sum of proper divisors of  220 = 1+2+4+5+10+11+20+22+44+55+110 = 284\n",
+        "Sum of proper divisors of 284 = 1+2+4+71+142 = 220\n",
+        "```\n",
+        "\n",
+        "Write a function to print pairs of amicable numbers in a range"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rI01kgKsbhFk"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5lDZp-Kobiba"
+      },
+      "source": [
+        "## odd number by filter()\n",
+        "* Write a program which can filter odd numbers in a list by using filter function"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Gd6sDPgDbtxv"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vZb37gk1bs7T"
+      },
+      "source": [
+        "## map()\n",
+        "\n",
+        "* Write a program which can map() to make a list whose elements are cube of elements in\n",
+        "a given list"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RGC3hm_Pb8N8"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "beWM2o6Wb8mf"
+      },
+      "source": [
+        "## map() and filter()\n",
+        "\n",
+        "Write a program which can map() and filter() to make a list whose elements are cube of\n",
+        "even number in a given list"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yJYsRBuBcbuJ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
